--- a/roles/execution_environments/tasks/main.yml
+++ b/roles/execution_environments/tasks/main.yml
@@ -5,7 +5,7 @@
     name:                           "{{ __execution_environments_item.name | mandatory }}"
     description:                    "{{ __execution_environments_item.description | default(omit, true) }}"
     image:                          "{{ __execution_environments_item.image | mandatory }}"
-    organization:                   "{{ __execution_environments_item.organization.name | default( __execution_environments_item.organization | default(omit, true)) }}"
+    organization:                   "{{ customer_organization | mandatory }}"
     credential:                     "{{ __execution_environments_item.credential | default(omit, true) }}"
     pull:                           "{{ __execution_environments_item.pull | default(omit, true) }}"
     state:                          "{{ __execution_environments_item.state | default(controller_state | default('present')) }}"
