--- a/roles/inventory_sources/tasks/main.yml
+++ b/roles/inventory_sources/tasks/main.yml
@@ -5,7 +5,7 @@
     new_name:                             "{{ __controller_source_item.new_name | default(omit, true) }}"
     description:                          "{{ __controller_source_item.description | default(omit, true) }}"
     inventory:                            "{{ __controller_source_item.inventory.name | default( __controller_source_item.inventory ) | mandatory }}"
-    organization:                         "{{ __controller_source_item.inventory.organization.name | default( __controller_source_item.organization | default(omit, true)) }}"
+    organization:                         "{{ customer_organization | mandatory }}"
     source:                               "{{ __controller_source_item.source | default(omit, true) }}"
     source_path:                          "{{ __controller_source_item.source_path | default(omit, true) }}"
     source_vars:                          "{{ __controller_source_item.source_vars | default(omit, true) }}"
