--- a/roles/credentials/tasks/main.yml
+++ b/roles/credentials/tasks/main.yml
@@ -5,7 +5,7 @@
     new_name:                       "{{ __controller_credentials_item.new_name | default(omit, true) }}"
     copy_from:                      "{{ __controller_credentials_item.copy_from | default(omit, true) }}"
     description:                    "{{ __controller_credentials_item.description | default(omit, true) }}"
-    organization:                   "{{ __controller_credentials_item.organization.name | default( __controller_credentials_item.organization | default(omit, true)) }}"
+    organization:                   "{{ customer_organization | mandatory }}"
     credential_type:                "{{ __controller_credentials_item.credential_type.name | default( __controller_credentials_item.credential_type | default(omit, true)) }}"
     inputs:                         "{{ __controller_credentials_item.inputs | default(omit, true) }}"
     user:                           "{{ __controller_credentials_item.user.username | default( __controller_credentials_item.user | default(omit, true)) }}"
