--- a/roles/inventories/tasks/main.yml
+++ b/roles/inventories/tasks/main.yml
@@ -4,7 +4,7 @@
     name:                       "{{ __controller_inventory_item.name | mandatory }}"
     copy_from:                  "{{ __controller_inventory_item.copy_from | default(omit, true) }}"
     description:                "{{ __controller_inventory_item.description | default(omit, true) }}"
-    organization:               "{{ __controller_inventory_item.organization.name | default( __controller_inventory_item.organization ) | mandatory }}"
+    organization:               "{{ customer_organization | mandatory }}"
     instance_groups:            "{{ __controller_inventory_item.instance_groups | default(omit, true) }}"
     variables:                  "{{ __controller_inventory_item.variables | default(omit, true) | regex_replace('[ ]{2,}','') }}"
     kind:                       "{{ __controller_inventory_item.kind | default(omit, true) }}"
