--- a/roles/job_launch/tasks/main.yml
+++ b/roles/job_launch/tasks/main.yml
@@ -6,7 +6,7 @@
     name:                     "{{ __job_launch_item.name | mandatory }}"
     job_type:                 "{{ __job_launch_item.job_type | default(omit, true) }}"
     inventory:                "{{ __job_launch_item.inventory | default(omit, true) }}"
-    organization:             "{{ __job_launch_item.organization.name | default( __job_launch_item.organization | default(omit, true)) }}"
+    organization:             "{{ customer_organization | mandatory }}"
     credentials:              "{{ __job_launch_item.credentials | default(omit, true) }}"
     extra_vars:               "{{ __job_launch_item.extra_vars | default(omit, true) }}"
     limit:                    "{{ __job_launch_item.limit | default(omit, true) }}"
