--- a/roles/notification_templates/tasks/main.yml
+++ b/roles/notification_templates/tasks/main.yml
@@ -5,7 +5,7 @@
     new_name:                       "{{ __controller_notification_item.new_name | default(omit, true) }}"
     copy_from:                      "{{ __controller_notification_item.copy_from | default(omit, true) }}"
     description:                    "{{ __controller_notification_item.description | default(omit, true) }}"
-    organization:                   "{{ __controller_notification_item.organization.name | default( __controller_notification_item.organization ) }}"
+    organization:                   "{{ customer_organization | mandatory }}"
     notification_type:              "{{ __controller_notification_item.notification_type | default(omit, true) }}"
     notification_configuration:     "{{ __controller_notification_item.notification_configuration | default(omit, true) }}"
     messages:                       "{{ __controller_notification_item.messages | default(omit, true) | regex_replace('[ ]{2,}','') }}"
