--- a/roles/teams/tasks/main.yml
+++ b/roles/teams/tasks/main.yml
@@ -4,7 +4,7 @@
     name:                     "{{ __controller_team_item.name | mandatory }}"
     new_name:                 "{{ __controller_team_item.new_name | default(omit, true) }}"
     description:              "{{ __controller_team_item.description | default(omit, true) }}"
-    organization:             "{{ __controller_team_item.organization.name | default( __controller_team_item.organization ) | mandatory }}"
+    organization:             "{{ customer_organization | mandatory }}"
     state:                    "{{ __controller_team_item.state | default(controller_state | default('present')) }}"
 
     # Role Standard Options
